src/test/FinalFail/FinalFail.expected
error: FinalFail.panda:7:11: cannot modify final field 'x'
1 error
