src/test/FinalFail/FinalFail.panda
class FinalFail {
    @final
    var x:Int

    constructor() {
        x := 1239
        x := 5920
    }
    
    @class
    method main() {
        var final := new FinalFail()
        Console.writeLine(final.x)
    }
}